logs/tldv_digest_20260409_101114.log
  File "/root/.openclaw/workspace/integrations/tldv/pipeline.py", line 50
    os.environ.setdefault("PYTHONPATH", str(INTEGRATIONS.parent)
                         ^
SyntaxError: '(' was never closed
